src/test/data/tests/chapter_17/invalid_types/void/mismatched_conditional.c
void foo(void) {
    return;
}

int main(void) {
    int a = 3;
    int flag = 4;
    int b = flag ? foo() : (a = 3);
    return 0;
}
